# asistencias-mdpn

./: docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: main.py
api/app/api/: dependencies.py
api/app/api/v1/endpoints/: asistencias.py  auth.py  config_nomina.py  configuraciones.py  personas.py  planillas.py  usuarios.py
api/app/core/: security.py
api/app/crud/: crud_asistencia.py  crud_config_nomina.py  crud_configuracion.py  crud_persona.py  crud_planilla.py  crud_usuario.py
api/app/db/: base.py  database.py
api/app/models/: asistencia.py  config_nomina.py  configuracion.py  persona.py  planilla.py  usuario.py
api/app/schemas/: asistencia.py  config_nomina.py  configuracion.py  persona.py  planilla.py  usuario.py
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
front/src/: main.jsx
front/src/components/: ProtectedRoute.jsx
front/src/components/layout/: Layout.jsx
front/src/components/ui/: Button.jsx  Input.jsx  Select.jsx  Table.jsx
front/src/context/: AuthContext.jsx
front/src/pages/Asistencias/: AsistenciaEditModal.jsx  Asistencias.jsx  useAsistencias.js
front/src/pages/Configuraciones/: Configuraciones.jsx  FeriadosList.jsx  NominaCatalogo.jsx  ReglasAsistenciaForm.jsx  useConfiguraciones.js
front/src/pages/Dashboard/: ActividadList.jsx  Charts.jsx  Dashboard.jsx  StatCard.jsx  useDashboard.js
front/src/routes/: AppRouter.jsx
front/src/services/: api.js  asistencias.js  auth.js  configNomina.js  configuraciones.js  personas.js  planillas.js  usuarios.js
(+11 files in other folders)
