[project]
name = "asistencias-mdpn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
]
